Use javax.xml-Base64 en-/decoder