@@ -20,6 +20,8 @@ import org.camunda.bpm.engine.variable.type.SerializableValueType;
 import org.camunda.bpm.engine.variable.value.SerializableValue;
 import org.camunda.bpm.engine.variable.value.TypedValue;
 
+import javax.xml.bind.DatatypeConverter;
+
 /**
  * @author Roman Smirnov
  *
@@ -104,7 +106,8 @@ public abstract class AbstractSerializableValueSerializer<T extends Serializable
   protected String getSerializedStringValue(byte[] serializedByteValue) {
     if(serializedByteValue != null) {
       if(!isSerializationTextBased()) {
-        serializedByteValue = Base64.encodeBase64(serializedByteValue);
+        return DatatypeConverter.printBase64Binary(serializedByteValue);
+        //serializedByteValue = Base64.encodeBase64(serializedByteValue);
       }
       return StringUtil.fromBytes(serializedByteValue);
     }
@@ -117,7 +120,8 @@ public abstract class AbstractSerializableValueSerializer<T extends Serializable
     if(serializedStringValue != null) {
       byte[] serializedByteValue = StringUtil.toByteArray(serializedStringValue);
       if (!isSerializationTextBased()) {
-        serializedByteValue = Base64.decodeBase64(serializedByteValue);
+        serializedByteValue = DatatypeConverter.parseBase64Binary(serializedStringValue);
+        // serializedByteValue = Base64.decodeBase64(serializedByteValue);
       }
       return serializedByteValue;
     }
